src/ui/snapshots/state/shared/settings_confirmation/all_defaults.snap
---
source: src/ui/state/shared/settings_confirmation.rs
expression: harness.backend()
---
"                                                                                                                        "
"  ┌Configuration Settings────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                                                                                  │  "
"  │Mode: Merge                                                                                                       │  "
"  │                                                                                                                  │  "
"  │Azure DevOps Settings:                                                                                            │  "
"  │Organization: default-org [default]                                                                               │  "
"  │Project: default-project [default]                                                                                │  "
"  │Repository: default-repo [default]                                                                                │  "
"  │PAT: ****hidden****                                                                                               │  "
"  │                                                                                                                  │  "
"  │Branch Settings:                                                                                                  │  "
"  │Dev Branch: develop [default]                                                                                     │  "
"  │Target Branch: main [default]                                                                                     │  "
"  │Local Repo: [None - will clone]                                                                                   │  "
"  │                                                                                                                  │  "
"  │Processing Settings:                                                                                              │  "
"  │Parallel Limit: 4 [default]                                                                                       │  "
"  │Max Concurrent Network: 10 [default]                                                                              │  "
"  │Max Concurrent Processing: 5 [default]                                                                            │  "
"  │Tag Prefix: merged/ [default]                                                                                     │  "
"  │                                                                                                                  │  "
"  │Mode-Specific Settings:                                                                                           │  "
"  │Work Item State: Next Merged [default]                                                                            │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │Press [Enter] to continue or [q/Esc] to exit                                                                      │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
