src/ui/snapshots/state/shared/settings_confirmation/cli_values.snap
---
source: src/ui/state/shared/settings_confirmation.rs
expression: harness.backend()
---
"                                                                                "
"  ┌Configuration Settings────────────────────────────────────────────────────┐  "
"  │                                                                          │  "
"  │Mode: Merge                                                               │  "
"  │                                                                          │  "
"  │Azure DevOps Settings:                                                    │  "
"  │Organization: cli-org [from cli]                                          │  "
"  │Project: cli-project [from cli]                                           │  "
"  │Repository: cli-repo [from cli]                                           │  "
"  │PAT: ****hidden****                                                       │  "
"  │                                                                          │  "
"  │Branch Settings:                                                          │  "
"  │Dev Branch: feature-branch [from cli]                                     │  "
"  │Target Branch: release-branch [from cli]                                  │  "
"  │Local Repo: /cli/path/to/repo [from cli]                                  │  "
"  │                                                                          │  "
"  │Processing Settings:                                                      │  "
"  │Parallel Limit: 8 [from cli]                                              │  "
"  │Max Concurrent Network: 20 [from cli]                                     │  "
"  │Max Concurrent Processing: 10 [from cli]                                  │  "
"  │Tag Prefix: cli-prefix/ [from cli]                                        │  "
"  │Since: 2024-01-01 (resolves to: 2024-01-01 00:00:00 UTC)                  │  "
"  │                                                                          │  "
"  │Mode-Specific Settings:                                                   │  "
"  │Work Item State: Done [from cli]                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │Press [Enter] to continue or [q/Esc] to exit                              │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
