src/ui/snapshots/state/shared/settings_confirmation/default_mode.snap
---
source: src/ui/state/shared/settings_confirmation.rs
expression: harness.backend()
---
"                                                                                                                        "
"  ┌Configuration Settings────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                                                                                  │  "
"  │Mode: Merge                                                                                                       │  "
"  │                                                                                                                  │  "
"  │Azure DevOps Settings:                                                                                            │  "
"  │Organization: test-org [from cli]                                                                                 │  "
"  │Project: test-project [from env: MERGERS_PROJECT]                                                                 │  "
"  │Repository: test-repo [from config file: "/test/config.toml"]                                                     │  "
"  │PAT: ****hidden****                                                                                               │  "
"  │                                                                                                                  │  "
"  │Branch Settings:                                                                                                  │  "
"  │Dev Branch: develop [from git: origin/develop]                                                                    │  "
"  │Target Branch: main [default]                                                                                     │  "
"  │Local Repo: /path/to/repo [from cli]                                                                              │  "
"  │                                                                                                                  │  "
"  │Processing Settings:                                                                                              │  "
"  │Parallel Limit: 4 [default]                                                                                       │  "
"  │Max Concurrent Network: 10 [default]                                                                              │  "
"  │Max Concurrent Processing: 5 [default]                                                                            │  "
"  │Tag Prefix: merged/ [default]                                                                                     │  "
"  │                                                                                                                  │  "
"  │Mode-Specific Settings:                                                                                           │  "
"  │Work Item State: Next Merged [default]                                                                            │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │Press [Enter] to continue or [q/Esc] to exit                                                                      │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
