src/ui/snapshots/state/shared/settings_confirmation/env_values.snap
---
source: src/ui/state/shared/settings_confirmation.rs
expression: harness.backend()
---
"                                                                                                                        "
"  ┌Configuration Settings────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                                                                                  │  "
"  │Mode: Merge                                                                                                       │  "
"  │                                                                                                                  │  "
"  │Azure DevOps Settings:                                                                                            │  "
"  │Organization: env-org [from env: MERGERS_ORGANIZATION]                                                            │  "
"  │Project: env-project [from env: MERGERS_PROJECT]                                                                  │  "
"  │Repository: env-repo [from env: MERGERS_REPOSITORY]                                                               │  "
"  │PAT: ****hidden****                                                                                               │  "
"  │                                                                                                                  │  "
"  │Branch Settings:                                                                                                  │  "
"  │Dev Branch: env-dev [from env: MERGERS_DEV_BRANCH]                                                                │  "
"  │Target Branch: env-target [from env: MERGERS_TARGET_BRANCH]                                                       │  "
"  │Local Repo: [None - will clone]                                                                                   │  "
"  │                                                                                                                  │  "
"  │Processing Settings:                                                                                              │  "
"  │Parallel Limit: 4 [default]                                                                                       │  "
"  │Max Concurrent Network: 10 [default]                                                                              │  "
"  │Max Concurrent Processing: 5 [default]                                                                            │  "
"  │Tag Prefix: merged/ [default]                                                                                     │  "
"  │                                                                                                                  │  "
"  │Mode-Specific Settings:                                                                                           │  "
"  │Work Item State: Next Merged [default]                                                                            │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │Press [Enter] to continue or [q/Esc] to exit                                                                      │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
