src/ui/snapshots/state/shared/settings_confirmation/file_values.snap
---
source: src/ui/state/shared/settings_confirmation.rs
expression: harness.backend()
---
"                                                                                                                        "
"  ┌Configuration Settings────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                                                                                  │  "
"  │Mode: Merge                                                                                                       │  "
"  │                                                                                                                  │  "
"  │Azure DevOps Settings:                                                                                            │  "
"  │Organization: file-org [from config file: "/home/user/.config/mergers/config.toml"]                               │  "
"  │Project: file-project [from config file: "/home/user/.config/mergers/config.toml"]                                │  "
"  │Repository: file-repo [from config file: "/home/user/.config/mergers/config.toml"]                                │  "
"  │PAT: ****hidden****                                                                                               │  "
"  │                                                                                                                  │  "
"  │Branch Settings:                                                                                                  │  "
"  │Dev Branch: develop [default]                                                                                     │  "
"  │Target Branch: main [default]                                                                                     │  "
"  │Local Repo: /file/path/to/repo [from config file: "/home/user/.config/mergers/config.toml"]                       │  "
"  │                                                                                                                  │  "
"  │Processing Settings:                                                                                              │  "
"  │Parallel Limit: 4 [default]                                                                                       │  "
"  │Max Concurrent Network: 10 [default]                                                                              │  "
"  │Max Concurrent Processing: 5 [default]                                                                            │  "
"  │Tag Prefix: merged/ [default]                                                                                     │  "
"  │                                                                                                                  │  "
"  │Mode-Specific Settings:                                                                                           │  "
"  │Work Item State: Next Merged [default]                                                                            │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │Press [Enter] to continue or [q/Esc] to exit                                                                      │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
